Fix z-index and padding for buttons displayed on the map

--- a/client/src/components/page/drawer/Drawer.css
+++ b/client/src/components/page/drawer/Drawer.css
@@ -3,7 +3,7 @@
 
 .Drawer {
     position: absolute 0;
-    z-index: 0;
+    z-index: 1;
     background-color: white;
     box-sizing: border-box;
 }
@@ -25,7 +25,7 @@
     left: auto;
     right: 0;
     z-index: 1;
-    
+
     &.Open {
         box-shadow: -4px 0 8px color(black alpha(25%));
     }
@@ -76,7 +76,7 @@
 }
 
 .Close {
-    position: absolute 25px 15px auto auto;
+    position: absolute 15px 15px auto auto;
     color: var(--primary) !important;
     z-index: 1;
 }
